--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,3 +5,10 @@ body {
   -webkit-font-smoothing: antialiased;
   line-height: 1.3;
 }
+
+.welcome-image {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
