--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,3 +11,15 @@ body {
   width: 50%;
   padding: 10px;
 }
+
+.smokers h2 {
+  font-size: 30px;
+  font-weight: 400;
+  color: blue;
+}
+
+.smokers h3 {
+  font-size: 50px;
+  font-weight: 600;
+}
+
