--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -23,3 +23,16 @@ body {
   font-weight: 600;
 }
 
+.smokers p {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.kettle-group {
+  margin: 50px 40px 100px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 40px;
+  justify-items: center;
+}
+
