--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -28,7 +28,7 @@ body {
   font-weight: 500;
 }
 
-.kettle-group {
+.smoker-group {
   margin: 50px 40px 100px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -36,11 +36,4 @@ body {
   justify-items: center;
 }
 
-.propane-group {
-  margin: 50px 40px 100px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 40px;
-  justify-items: center;
-}
 
