--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -38,6 +38,10 @@ body {
 
 button {
   cursor: pointer;
+  background-color: crimson;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
 }
 
 
