had to differentiate buttons

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -36,7 +36,7 @@ body {
   justify-items: center;
 }
 
-button {
+.smokers button {
   cursor: pointer;
   background-color: crimson;
   color: white;
