--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -47,6 +47,7 @@
     transform: translateY(-8px);
 }
 
+/*
 .Header button {
     padding: 8px 20px;
     font-size: 20px;
@@ -64,8 +65,15 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
     transform: translateY(-8px);
 }
+*/
 
 .Header a:first-child img {
     border-radius: 50%;
+}
+
+.Header button {
+    background-image: url('../images/cart.png');
+    background-size: 60px 30px;
+    padding: 20px 20px;
 }
 
