--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -59,13 +59,14 @@
     cursor: pointer;
     transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1)
 }
-
+*/
 .Header button:hover {
-    background: white;
+    background: crimson;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
     transform: translateY(-8px);
+    color: white;
 }
-*/
+
 
 .Header a:first-child img {
     border-radius: 50%;
@@ -73,7 +74,14 @@
 
 .Header button {
     background-image: url('../images/cart.png');
-    background-size: 60px 30px;
+    background-size: 90px 60px;
     padding: 20px 20px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: 1s cubic-bezier(0.2, 0.8, 0.2, 1);
+    font-size: 13px;
+    font-weight: 900;
+    color: rgb(255, 119, 146);
 }
 
