--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -12,3 +12,10 @@
     max-width: 500px;
     margin: 0 auto;
 }
+
+.Copywright {
+    color: #486791;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
